--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -12,47 +12,78 @@
 
             <section id="big_flex">
                 <aside id="color_palette_one">
-                    <h2 class="title_1">Barbie and Friends!</h2>
+                    <h2 id="title_1">Barbie and Friends!</h2>
                     <div id="a1">
-                        <p class="text_hex">flksdfj</p>
+                        <h4 class="color_title1">Magenta Haze</h4>
+                        <p class="text_hex">#9e4770</p>
                     </div>
                     <div id="b1">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title1">Old Rose</h4>
+                        <p class="text_hex">#b67786</p>
                     </div>
                     <div id="c1">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title1">Puce</h4>
+                        <p class="text_hex">#e096a3</p>
                     </div>
                     <div id="d1">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title1">Cherry Blossom Pink</h4>
+                        <p class="text_hex">#efa8b8</p>
                     </div>
                     <div id="e1">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title1" id="fairy_text">
+                            Fairy Tale
+                        </h4>
+                        <p class="text_hex" id="fairy_hex">#f6cbdf</p>
                     </div>
                 </aside>
 
                 <aside id="color_palette_two">
-                    <h2 class="title_2">Barbie and Friends!</h2>
+                    <h2 id="title_2">She-<span>Hulk</span></h2>
                     <div id="a2">
-                        <p class="text_hex">
-
-                        </p>
+                        <h4 class="color_title2">Indigo</h4>
+                        <p class="text_hex">#540d6e</p>
                     </div>
                     <div id="b2">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title2">Pigment Green</h4>
+                        <p class="text_hex">#00a34f</p>
                     </div>
                     <div id="c2">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title2">Lavender (floral)</h4>
+                        <p class="text_hex">#A379c9</p>
                     </div>
                     <div id="d2">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title2">SGUBUS Green</h4>
+                        <p class="text_hex">#95df63</p>
                     </div>
                     <div id="e2">
-                        <p class="text_hex"></p>
+                        <h4 class="color_title2" id="pla_title">Platinum</h4>
+                        <p class="text_hex" id="pla_hex">#eaeaea</p>
                     </div>
 
                 </aside>
 
                 <aside id="color_palette_three">
+                    <h2 id="title_3">Kermit and Piggy!</h2>
+                    <div id="a3">
+                        <h4 class="color_title3">Olive</h4>
+                        <p class="text_hex">#7e7105</p>
+                    </div>
+                    <div id="b3">
+                        <h4 class="color_title3">Avocado</h4>
+                        <p class="text_hex">#6a8f06</p>
+                    </div>
+                    <div id="c3">
+                        <h4 class="color_title3">Mexican Pink</h4>
+                        <p class="text_hex">#e1217a</p>
+                    </div>
+                    <div id="d3">
+                        <h4 class="color_title3">Butterscotch</h4>
+                        <p class="text_hex">#d1984b</p>
+                    </div>
+                    <div id="e3">
+                        <h4 class="color_title3">Dutch White</h4>
+                        <p class="text_hex">#e7dbb3</p>
+                    </div>
 
                 </aside>
 
