--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -15,25 +15,25 @@
                     <h2 id="title_1">Barbie and Friends!</h2>
                     <div id="a1">
                         <h4 class="color_title1">Magenta Haze</h4>
-                        <p class="text_hex">#9e4770</p>
+                        <p class="text_hex">#9E4770</p>
                     </div>
                     <div id="b1">
                         <h4 class="color_title1">Old Rose</h4>
-                        <p class="text_hex">#b67786</p>
+                        <p class="text_hex">#B67786</p>
                     </div>
                     <div id="c1">
                         <h4 class="color_title1">Puce</h4>
-                        <p class="text_hex">#e096a3</p>
+                        <p class="text_hex">#E096a3</p>
                     </div>
                     <div id="d1">
                         <h4 class="color_title1">Cherry Blossom Pink</h4>
-                        <p class="text_hex">#efa8b8</p>
+                        <p class="text_hex">#EFA8B8</p>
                     </div>
                     <div id="e1">
                         <h4 class="color_title1" id="fairy_text">
                             Fairy Tale
                         </h4>
-                        <p class="text_hex" id="fairy_hex">#f6cbdf</p>
+                        <p class="text_hex" id="fairy_hex">#F6cbdf</p>
                     </div>
                 </aside>
 
