--- a/projects/license/index.html
+++ b/projects/license/index.html
@@ -67,7 +67,7 @@
                         <div>Expires <span>04-01-25</span></div>
                     </div>
                     <div id="address">
-                        JOHN DOE
+                        Sofia Florez-Silva
                         <br>
                         456 ANYWHERE STREET
                         <br>
@@ -102,14 +102,14 @@
                                     display: inline-block;
                             -->
                             <div id="data-left">
-                                <div>Sex: <span>M</span></div>
-                                <div>Ht: <span>5'-9"</span></div>
+                                <div>Sex: <span>F</span></div>
+                                <div>Ht: <span>5'-3"</span></div>
                                 <div>Eyes: <span>Brown</span></div>
                             </div>
                             <div id="data-right">
                                 <div>Hair: <span>Brown</span></div>
-                                <div>Wt: <span>162 lbs</span></div>
-                                <div>DOB: <span>04-01-89</span></div>
+                                <div>Wt: <span>155 lbs</span></div>
+                                <div>DOB: <span>02-17-93</span></div>
                             </div>
                             <!--
                                 The signature section can stay on its own line,
@@ -119,7 +119,7 @@
                                 and center it using the text-align property.
                             -->
                             <div id="signature">
-                                John Doe
+                                Sofia Florez-Silva
                             </div>
                         </div>
                     </div>
@@ -156,6 +156,7 @@
                         </div>
                         <div id="real-id">
                             <i class="fa-solid fa-star"></i>
+                           
                         </div>
 
                         <!--
