--- a/projects/license/index.html
+++ b/projects/license/index.html
@@ -64,7 +64,7 @@
                     -->
                     <div id="id-and-expiration">
                         <div>License No. <span>P7777777</span></div>
-                        <div>Expires <span>04-01-25</span></div>
+                        <div>Expires <span>02-17-25</span></div>
                     </div>
                     <div id="address">
                         Sofia Florez-Silva
@@ -89,7 +89,7 @@
                                 with the "small-pic-container" id, and resize 
                                 the image to make it fit within the layout.
                             -->
-                            <img src="images/mii.png">
+                            <img src="images/sofia.jpeg">
                         </div>
                         <div id="data-fields">
                             <!--
@@ -140,7 +140,7 @@
                         by setting the following CSS Property:
                             width: 100%;
                     -->
-                    <img src="images/mii.png">
+                    <img src="images/sofia.jpeg">
                     <div id="donor-and-real-id">
                         <!--
                             Lastly (in terms of the layout), we need to get the
