--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -1,133 +1,94 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Product Showcase Site</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="two-columns">
-            <div id="sidebar-content">
-                <h2>Contents</h2>
-                <ul>
-                    <li><a href="#section1">Top</a></li>
-                    <li><a href="#section2">possible phycological explinations</a></li>
-                    <li><a href="#section3">species</a></li>
-                    <li><a href="#section4">External Links</a></li>
-                </ul>
-            </div>
-            <div id="main-content">
-                <h1 id="section1">Crown Shyness</h1>
-                <hr>
-                    <h5>From Wikipedia, the free encyclopedia</h5>
-                    <p>
-                        <i>For the album by Trash Boat, see Crown Shyness (album).</i>
-                    </p>
-                <div class="side-by-side">
-                   <p>
-                        <b>Crown shyness</b> 
-                        <i>(also canopy disengagement,</i> 
-                        <sup>[1]</sup> 
-                        <i> canopy shyness,</i>
-                        <sup>[2]</sup> 
-                        <i>or inter-crown spacing</i> 
-                        <sup>[3])</sup> 
-                        is a phenomenon 
-                        observed in some tree species, 
-                        in which the crowns of fully stocked trees do not touch each other, 
-                        forming a canopy with channel-like gaps.
-                            <sup>[4][5]</sup> 
-                        The phenomenon is most prevalent among trees of the same species, 
-                        but also occurs between trees of different species.
-                            <sup>[6][7]</sup> 
-                        There exist many hypotheses as to why crown 
-                        shyness is an adaptive behavior, and research 
-                        suggests that it might inhibit spread of leaf-eating 
-                        insect larvae.
-                            <sup>[8]</sup>
-                    </p>
-                    <img
-                    src="images/shynessblack.jpg"
-                    width="350"
-                    alt="silhoutte example of canopy shyness"
-                    >
-                    <br>
-                </div>
-                <h2 id="section2">Possible physiological explinations</h2>
-                <hr>
-                <div class="side-by-side">
-                    <p>
-                        The exact physiological basis of crown shyness is uncertain.
-                        <sup>[6]</sup> The phenomenon has been discussed in scientific 
-                        literature since the 1920s.<sup>[9]</sup> The variety of 
-                        hypotheses and experimental results might suggest that 
-                        there are multiple mechanisms across 
-                        different species, an example of convergent evolution.
-                        <sup><i>[citation needed]</i></sup>
-                    </p>
-                    <img
-                        src="images/crown-shyness-green.jpg"
-                        width="350"
-                        alt="example of canopy shyness"
-                    >
-                </div>
-                <p>
-                    Some hypotheses contend that the interdigitation of canopy 
-                    branches leads to "reciprocal pruning" of adjacent trees: 
-                    trees in windy areas suffer physical damage as they collide 
-                    with each other during winds; the abrasions and collisions 
-                    induce a crown shyness response. Studies suggest that 
-                    lateral branch growth is largely uninfluenced by neighbours 
-                    until disturbed by mechanical abrasion.<sup>[10]</sup> If the 
-                    crowns are artificially prevented from colliding in the winds, 
-                    they gradually fill the canopy gaps.<sup>[11]</sup> This 
-                    explains instances of crown shyness between branches of the same 
-                    organism. Proponents of this idea cite that shyness is particularly 
-                    seen in conditions conducive to this pruning, including windy 
-                    forests, stands of flexible trees, and early succession forests 
-                    where branches are flexible and limited in lateral 
-                    movement.<sup>[6][12]</sup> According to this theory, variable 
-                    flexibility in lateral branches greatly influences the degree 
-                    of crown shyness.
-                </p>
-                <br>
-                <h2 id="section3">Species</h2>
-                <hr>
-                <p>Trees that display crown shyness patterns include:</p>
-                    <ul>
-                        <li>
-                            Species of Dryobalanops, including Dryobalanops 
-                            lanceolata and Dryobalanops aromatica (kapur)
-                        </li>
-                        <li>
-                            Some species of eucalypt
-                        </li>
-                        <li>
-                            Pinus contorta or lodgepole pine
-                        </li>
-                        <li>
-                            Avicennia germinans or black mangrove
-                        </li>
-                        <li>
-                            Schefflera pittieri
-                        </li>
-                        <li>
-                            Clusia alata
-                        </li>
-                        <li>
-                            K. Paijmans observed crown shyness in a multi-species 
-                            group of trees, comprising Celtis spinosa and 
-                            Pterocymbium beccarii
-                        </li>
-                    </ul>
-                <br>
-                <h2 id="section4">External Links</h2>
-                <hr>
-                <p>Media related to 
-                    <a href="https://commons.wikimedia.org/wiki/
-                    Category:Crown_shyness" id="csexternal">
-                    Crown Shyness
-                    </a> at Wikimedia Commons</p>
+        <img 
+            class="body"
+            src="images/wonka-bar.webp"
+            alt="wonka-bar"
+        >
+        <div id="heading0">
+            <h1 id="heading1">Real Life Products</h1>
+        </div>
+        <div id="product1">
+            <h2 id="heading2">The 100</h2>
+            <p id="para2">
+                Chocolate Cake
+            </p>
+            <img
+                id="cake1"
+                src="images/chocolate-cake-100.jpg"
+                alt="Chocolate Cake"
+            >
+        </div>
+        <div id="product2">
+            <h2 id="heading3">Doctor Who</h2>
+            <p id="para3">
+                Jelly Cookies
+            </p>
+            <img 
+                id="cookies1"
+                src="images/jelly-cookie.jpg"
+                alt="Jelly Cookie"
+            >
+        </div>
+        <div id="product3">
+            <h2>Legend of Zelda</h2>
+            <p id="para4">
+                Monster Rice Ball
+            </p>
+            <img 
+                id="rice-ball"
+                src="images/monster-rice-ball.jpeg"
+                alt="Monster Rice Ball"
+            >
+            <p id="para5">
+                Pumpkin Soup
+            </p>
+            <img 
+                id="pumpkin-soup"
+                src="images/pumpkin-soup.jpg"
+                alt="Pumpkin Soup"
+            >
+        </div>
+        <div id="product4">
+            <h2 id="heading4">Rugrats</h2>
+            <p id="para6">
+                Reptar Bar
+            </p>
+            <img 
+                id="rep-bar"
+                src="images/reptar-bar.jpg"
+                alt="Reptar Bar"
+            >
+        </div>
+        <div id="product5">
+            <h2 id="heading5">Scooby-Doo</h2>
+            <p id="para7">
+                Scooby Snax
+            </p>
+            <img 
+                id="ruh-roh"
+                src="images/scooby-snax.jpg"
+                alt="Scooby Snax"
+            >
+        </div>
+        <div id="product6">
+            <h2 id="heading6">Star Wars</h2>
+            <p id="para8">
+                Blue Milk
+            </p>
+            <img 
+                id="blue-milk"
+                src="images/blue-milk.jpg"
+                alt="Blue Milk"
+            >
+        </div>
     </body>
 </html>
