--- a/demos/two-columns-mixed/index.html
+++ b/demos/two-columns-mixed/index.html
@@ -32,7 +32,9 @@
             <div id="main">
                 <!-- Metube item start -->
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
+                    
+                        <img src="images/addy." alt="">
+                    
                     <h4><a href="#">Metube video title</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Channel Placeholder</div>
