--- a/demos/two-columns-mixed/index.html
+++ b/demos/two-columns-mixed/index.html
@@ -33,8 +33,29 @@
                 <!-- Metube item start -->
                 <div class="metube-item">
                     
-                        <img src="images/addy." alt="">
+                        <img
+                            class="thumb-img" 
+                            src="images/shop.jpg" alt="A woman holding shopping bags"
+                        >
+
                     
+                    <h4><a href="#">Learn how to shop like a pro!</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Ja'nice Stevens</div>
+                        <div class="views-and-post">
+                            <span class="video-views">2M views</span>
+                            &bull;
+                            <span class="video-post">13 Hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Metube item end -->
+                <!-- Metube item start -->
+                <div class="metube-item">
+                    <img
+                    class="thumb-img" 
+                    src="images/shop.jpg" alt="A woman holding shopping bags"
+                >
                     <h4><a href="#">Metube video title</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Channel Placeholder</div>
@@ -48,7 +69,10 @@
                 <!-- Metube item end -->
                 <!-- Metube item start -->
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
+                    <img
+                    class="thumb-img" 
+                    src="images/shop.jpg" alt="A woman holding shopping bags"
+                >
                     <h4><a href="#">Metube video title</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Channel Placeholder</div>
@@ -62,7 +86,10 @@
                 <!-- Metube item end -->
                 <!-- Metube item start -->
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
+                    <img
+                    class="thumb-img" 
+                    src="images/shop.jpg" alt="A woman holding shopping bags"
+                >
                     <h4><a href="#">Metube video title</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Channel Placeholder</div>
@@ -76,21 +103,10 @@
                 <!-- Metube item end -->
                 <!-- Metube item start -->
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">Metube video title</a></h4>
-                    <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
-                        <div class="views-and-post">
-                            <span class="video-views">1.9k views</span>
-                            &bull;
-                            <span class="video-post">8 Hours ago</span>
-                        </div>
-                    </div>
-                </div>
-                <!-- Metube item end -->
-                <!-- Metube item start -->
-                <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
+                    <img
+                        class="thumb-img" 
+                        src="images/shop.jpg" alt="A woman holding shopping bags"
+                    >
                     <h4><a href="#">Metube video title</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Channel Placeholder</div>
@@ -104,7 +120,10 @@
                 <!-- Metube item end -->
                   <!-- Metube item start -->
                   <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
+                    <img
+                    class="thumb-img" 
+                    src="images/shop.jpg" alt="A woman holding shopping bags"
+                >
                     <h4><a href="#">Metube video title</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Channel Placeholder</div>
