--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -1,94 +1,112 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Product Showcase Site</title>
+        <title>MeTube</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <img 
-            class="body"
-            src="images/wonka-bar.webp"
-            alt="wonka-bar"
-        >
-        <div id="heading0">
-            <h1 id="heading1">Real Life Products</h1>
-        </div>
-        <div id="product1">
-            <h2 id="heading2">The 100</h2>
-            <p id="para2">
-                Chocolate Cake
-            </p>
-            <img
-                id="cake1"
-                src="images/chocolate-cake-100.jpg"
-                alt="Chocolate Cake"
-            >
-        </div>
-        <div id="product2">
-            <h2 id="heading3">Doctor Who</h2>
-            <p id="para3">
-                Jelly Cookies
-            </p>
-            <img 
-                id="cookies1"
-                src="images/jelly-cookie.jpg"
-                alt="Jelly Cookie"
-            >
-        </div>
-        <div id="product3">
-            <h2>Legend of Zelda</h2>
-            <p id="para4">
-                Monster Rice Ball
-            </p>
-            <img 
-                id="rice-ball"
-                src="images/monster-rice-ball.jpeg"
-                alt="Monster Rice Ball"
-            >
-            <p id="para5">
-                Pumpkin Soup
-            </p>
-            <img 
-                id="pumpkin-soup"
-                src="images/pumpkin-soup.jpg"
-                alt="Pumpkin Soup"
-            >
-        </div>
-        <div id="product4">
-            <h2 id="heading4">Rugrats</h2>
-            <p id="para6">
-                Reptar Bar
-            </p>
-            <img 
-                id="rep-bar"
-                src="images/reptar-bar.jpg"
-                alt="Reptar Bar"
-            >
-        </div>
-        <div id="product5">
-            <h2 id="heading5">Scooby-Doo</h2>
-            <p id="para7">
-                Scooby Snax
-            </p>
-            <img 
-                id="ruh-roh"
-                src="images/scooby-snax.jpg"
-                alt="Scooby Snax"
-            >
-        </div>
-        <div id="product6">
-            <h2 id="heading6">Star Wars</h2>
-            <p id="para8">
-                Blue Milk
-            </p>
-            <img 
-                id="blue-milk"
-                src="images/blue-milk.jpg"
-                alt="Blue Milk"
-            >
+        <div id="grid-layout">
+            <div id="header">
+                <h1>
+                    <a href="#">
+                        <span id="me">Me</span><span id="tube">Tube</span>
+                    </a>
+                </h1>
+            </div>
+            <div id="sidebar">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Shorts</a></li>
+                    <li><a href="#">Subscriptions</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Library</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Your videos</a></li>
+                    <li><a href="#">Your movies & TV</a></li>
+                    <li><a href="#">Watch Later</a></li>
+                </ul>
+            </div>
+            <div id="main">
+                <div class="metube-item">
+                    <img 
+                    src="images/thumbnail1.jpeg" 
+                    alt="lksdjflksdjf">
+
+               
+                    <h4><a href="#">Being a Remote Teacher </a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9K views</span>
+                            &bull; 
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9K views</span>
+                            &bull; 
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9K views</span>
+                            &bull; 
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9K views</span>
+                            &bull; 
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9K views</span>
+                            &bull; 
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder"></div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="views-and-post">
+                            <span class="video-views">1.9K views</span>
+                            &bull; 
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
