--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MeTube</title>
+        <title>Document</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -25,20 +25,21 @@
                     <li><a href="#">Library</a></li>
                     <li><a href="#">History</a></li>
                     <li><a href="#">Your videos</a></li>
-                    <li><a href="#">Your movies & TV</a></li>
                     <li><a href="#">Watch Later</a></li>
                 </ul>
+                
             </div>
             <div id="main">
                 <div class="metube-item">
-                    <img 
-                    src="images/thumbnail1.jpeg" 
-                    alt="lksdjflksdjf">
-
-               
-                    <h4><a href="#">Being a Remote Teacher </a></h4>
+                    <div class="img">
+                        <img 
+                        src="images/mass effect 2.jpg"
+                        alt="mass effect"
+                        >
+                    </div>
+                    <h4><a href="#">First play thourght</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Gamer for life</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9K views</span>
                             &bull; 
@@ -47,10 +48,15 @@
                     </div>
                 </div>
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="image-2">
+                        <img
+                            src="images/vampiremagic.png"
+                            alt="magic vampire"
+                        >
+                    </div>
+                    <h4><a href="#">why you should play magic</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Magic101</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9K views</span>
                             &bull; 
@@ -59,10 +65,15 @@
                     </div>
                 </div>
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="image-3">
+                        <img
+                            src="images/art.png"
+                            alt="Deluxe-Art-Supplies-Set"
+                        >
+                    </div>
+                    <h4><a href="#">what to you use for art</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Artsyfreaks</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9K views</span>
                             &bull; 
@@ -71,10 +82,15 @@
                     </div>
                 </div>
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="image-4">
+                        <img
+                        src="images/Screenshot 2024-06-25 074429.png"
+                        alt="music buff"
+                        >
+                    </div>
+                    <h4><a href="#">In or out</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Music buff</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9K views</span>
                             &bull; 
@@ -83,26 +99,36 @@
                     </div>
                 </div>
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="image-5">
+                        <img
+                        src="images/mass effect 2.jpg"
+                        alt="mass efcect again"
+                        >
+                    </div>
+                    <h4><a href="#">Part 2</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">gamerforlife</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9K views</span>
                             &bull; 
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">1 hours ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="image-6">
+                        <img
+                        src="images/Sketchbooks.png"
+                        alt="sketchbook"
+                        >
+                    </div>
+                    <h4><a href="#">Sketchbook tour</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Artsyfreaks</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9K views</span>
                             &bull; 
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">2 hours ago</span>
                         </div>
                     </div>
                 </div>
