--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -1,34 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Photos</title>
-        <link href="css/photos-style.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <title>Client NavBar 1</title>
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h2>
-            Photos
-        </h2>
-        <a href="index.html">
-            <h4 class="buttons">
-                Home
-            </h4>
-        <div class="photos-gallery">
-            <img id="egg"
-                src="images/Photos/01Eggs.JPG"
-                alt="Eggs"
-            >
-            <img id="birbs-1"
-                src="images/Photos/02birbs1.JPG"
-                alt="Baby Birbs 1-1"
-            >
-            <img id="birbs-2"
-            src="images/Photos/02birbs2.JPG"
-            alt="Baby Birbs 1-2"
-            >
+        <div id="navbar-top">
+            <a href="index.html">BOGO 50% off on select costumes
+                 - Use code: BOGO50
+            </a>
         </div>
+        <div id="navbar-middle">
+            <a href="index.html" id="logo-link-3">Tailored Spooks</a>
+            <a href="index.html">Jobs</a>
+            <a href="index.html">Blog</a>
+            <a href="index.html">Orders</a>
+            <a href="index.html">Account</a>
+            <a href="index.html" id="cta-button">Sign In</a>
+        </div>    
+        <div id="navbar-bottom">
+            <a href="index.html">New Arrivals</a>
+            <a href="index.html">Costumes</a>
+            <a href="index.html">Accessories</a>
+            <a href="index.html">Decorations</a>
+            <a href="index.html">Animatronics</a>
+            <a href="index.html">On Sale</a>
+        </div>    
     </body>
-</html>
+    </html>
