--- a/projects/dropdown-project/donate.html
+++ b/projects/dropdown-project/donate.html
@@ -23,7 +23,17 @@
             <a class="maina" href="donate.html">Donate</a>
         </div> 
 
-         <div id="footer">
+        <div id="newbg">
+            <div class="single-column-layout">
+                <img src="images/" alt="">
+
+            </div>
+            
+        </div>
+
+       
+
+         <div class="footer3">
                     <p>&copy; Copyright 2024 AdoptMePLZ coded by Nell Fonseca</p>
         </div> 
 
